--- a/caseo_exploration.html
+++ b/caseo_exploration.html
@@ -136,9 +136,9 @@ wheel. Individual, miniature, hermetically sealed cheese wheels. So you ought to
 Babybel cheese the way you do a cheddar or a gouda. Day after day, month after month, I looked
 at those Babybel cheeses and wondered what an 18-month Babybel cheese would look and taste like.
 Finally, I decided there was only one way to find&nbsp;out.</p>
-<hr />
-<p><a href="https://blog.justalfred.com/images/cheese_experiment.jpg"><img alt="" src="https://blog.justalfred.com/images/cheese_experiment.jpg" /></a></p>
-<hr />
+<hr>
+<p><a href="https://blog.justalfred.com/images/cheese_experiment.jpg"><img alt="" src="https://blog.justalfred.com/images/cheese_experiment.jpg"></a></p>
+<hr>
 <p>Last week marked the 18-month anniversary of the oldest in my collection. I didn&#8217;t collect
 the cheeses with rigorous regularity, but I was satisfied in the end having a somewhat even
 spectrum of ages. It was time to examine. Opening the freshest of the four samples presented
@@ -197,13 +197,13 @@ don&#8217;t want to eat. Pros and&nbsp;cons.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
