--- a/hypotheses-part-1.html
+++ b/hypotheses-part-1.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Science" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Hypotheses Part 1"/>
         <meta property="og:url" content="https://blog.justalfred.com/hypotheses-part-1.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/07/hypotheses-part-1.html I’m going to try again to focus on short-form publishing here. I’m starting yet another series of posts called “Hypotheses”. I am well known as having random ideas float through my head. Some of these are ideas …"/>
         <meta property="article:published_time" content="2013-07-27" />
             <meta property="article:section" content="science" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>I&#8217;m going to try again to focus on short-form publishing here. I&#8217;m
 starting yet another series of posts called &#8220;Hypotheses&#8221;. I am well
 known as having random ideas float through my head. Some of these are
-ideas ...</p>"/>
+ideas …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -138,7 +138,7 @@ Just Alfred            </a>
 starting yet another series of posts called &#8220;Hypotheses&#8221;. I am well
 known as having random ideas float through my head. Some of these are
 ideas about how some part of existence works. I&#8217;ll share some with you
-in this series.<br />
+in this series.<br>
 <a name="more"></a>Have you ever marveled at dogs&#8217; olfactory acumen?
 Give a bloodhound a sock, and he&#8217;ll find a lost person. Or so the movies
 say. Have you also ever marveled at how smelly we can get by the end of
@@ -193,13 +193,13 @@ please do shower if you decide to report to me in&nbsp;person.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
