--- a/nobels.html
+++ b/nobels.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Science,Humans" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Nobels"/>
         <meta property="og:url" content="https://blog.justalfred.com/nobels.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/09/nobels.html You know what’s cooler than winning a Nobel Prize? Winning two Nobel Prizes. How many people have done this since the first award in 1901? Four. Would you believe that the first was a woman? Madame Marie Skłodowska-Curie …"/>
         <meta property="article:published_time" content="2013-09-08" />
             <meta property="article:section" content="science" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -39,8 +39,8 @@
 <p>You know what&#8217;s cooler than winning a Nobel Prize? Winning two Nobel
 Prizes. How many people have done this since the first award in 1901?
 Four. Would you believe that the first was a&nbsp;woman?  </p>
-<p><a name="more"></a><br />
-Madame Marie Skłodowska-Curie ...</p>"/>
+<p><a name="more"></a><br>
+Madame Marie Skłodowska-Curie …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -141,7 +141,7 @@ Just Alfred            </a>
 <p>You know what&#8217;s cooler than winning a Nobel Prize? Winning two Nobel
 Prizes. How many people have done this since the first award in 1901?
 Four. Would you believe that the first was a&nbsp;woman?  </p>
-<p><a name="more"></a><br />
+<p><a name="more"></a><br>
 Madame Marie Skłodowska-Curie. Born in Poland, died in France. A
 pioneering woman in science, her list of achievements is humbling to
 even the greatest of geniuses. Her first Nobel was the Physics Prize,
@@ -192,13 +192,13 @@ their intellectual equals, then everyone pays a&nbsp;cost.  </p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
