--- a/pages/about-the-site.html
+++ b/pages/about-the-site.html
@@ -13,13 +13,13 @@
 <link rel="canonical" href="https://blog.justalfred.com/pages/about-the-site.html">
 
         <meta name="author" content="Just Alfred" />
-        <meta name="description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. My doctorate was in Experimental Condensed Matter Physics, but lately, I’ve been thinking more about how to be human. This has taken me on a ..." />
+        <meta name="description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. My doctorate was in Experimental Condensed Matter Physics, but lately, I’ve been thinking more about how to be human. This has taken me on a …" />
 
     <meta property="og:site_name" content="Just Alfred" />
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="About the Site"/>
     <meta property="og:url" content="https://blog.justalfred.com/pages/about-the-site.html"/>
-    <meta property="og:description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. My doctorate was in Experimental Condensed Matter Physics, but lately, I’ve been thinking more about how to be human. This has taken me on a ..." />
+    <meta property="og:description" content="Hello. I’m just another Alfred. I’m a former physicist and data scientist. Recently, I worked at White Ops, Paperless Post, and Bitly. My doctorate was in Experimental Condensed Matter Physics, but lately, I’ve been thinking more about how to be human. This has taken me on a …" />
 
     <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@Alphrabet">
@@ -133,13 +133,13 @@ If you&#8217;d like to respond to anything I write, email me at:
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
