--- a/preconceptions-part-1.html
+++ b/preconceptions-part-1.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/04/preconceptions-part-1.html Tonight begins my first Ring cycle at the opera house. I’ve seen the Otto Schenk production on DVD, and the Live in HD performances of the Robert Lepage production in the theaters. I thought them both fantastic productions ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/04/preconceptions-part-1.html Tonight begins my first Ring cycle at the opera house. I’ve seen the Otto Schenk production on DVD, and the Live in HD performances of the Robert Lepage production in the theaters. I thought them both fantastic productions …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Preconceptions Part 1"/>
         <meta property="og:url" content="https://blog.justalfred.com/preconceptions-part-1.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/04/preconceptions-part-1.html Tonight begins my first Ring cycle at the opera house. I’ve seen the Otto Schenk production on DVD, and the Live in HD performances of the Robert Lepage production in the theaters. I thought them both fantastic productions ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/04/preconceptions-part-1.html Tonight begins my first Ring cycle at the opera house. I’ve seen the Otto Schenk production on DVD, and the Live in HD performances of the Robert Lepage production in the theaters. I thought them both fantastic productions …"/>
         <meta property="article:published_time" content="2013-04-25" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -41,7 +41,7 @@ opera house. I&#8217;ve seen the <a href="http://youtu.be/9sgVjgraXsc?t=50s">Ott
 production</a> on <span class="caps">DVD</span>, and the Live in
 <span class="caps">HD</span> performances of the <a href="http://youtu.be/sHa3NO219lc">Robert Lepage
 production</a> in the theaters. I thought them
-both fantastic productions ...</p>"/>
+both fantastic productions …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -213,13 +213,13 @@ couple weeks whether the criticisms deserve merit or are merely&nbsp;meretriciou
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
