--- a/present.html
+++ b/present.html
@@ -142,7 +142,7 @@ I see a faint, clouded reflection of myself. I feel like I&#8217;m here, but I&#
 Approaching <em>muga</em>. I start to detach. I want others to see this and experience&nbsp;it.</p>
 <p>And with these thoughts in mind, I made my own&nbsp;art.</p>
 <p>Self Portrait: Relinquishing My&nbsp;Self</p>
-<p><a href="https://blog.justalfred.com/images/self-portrait1.jpg"><img alt="" src="https://blog.justalfred.com/images/self-portrait1.jpg" /></a></p>
+<p><a href="https://blog.justalfred.com/images/self-portrait1.jpg"><img alt="" src="https://blog.justalfred.com/images/self-portrait1.jpg"></a></p>
             </div>
             <!-- /.entry-content -->
         </article>
@@ -171,13 +171,13 @@ Approaching <em>muga</em>. I start to detach. I want others to see this and expe
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
