--- a/satb.html
+++ b/satb.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html That stands for soprano, alto, tenor, bass. That’s just a scoring for choral works common enough to get an abbreviation. You may have noticed if there are choirs in your church that there are the high and lowish ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html That stands for soprano, alto, tenor, bass. That’s just a scoring for choral works common enough to get an abbreviation. You may have noticed if there are choirs in your church that there are the high and lowish …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="SATB"/>
         <meta property="og:url" content="https://blog.justalfred.com/satb.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html That stands for soprano, alto, tenor, bass. That’s just a scoring for choral works common enough to get an abbreviation. You may have noticed if there are choirs in your church that there are the high and lowish ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html That stands for soprano, alto, tenor, bass. That’s just a scoring for choral works common enough to get an abbreviation. You may have noticed if there are choirs in your church that there are the high and lowish …"/>
         <meta property="article:published_time" content="2010-12-19" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>That stands for <em>soprano</em>, <em>alto</em>, <em>tenor</em>, <em>bass</em>. That&#8217;s just a
 scoring for choral works common enough to get an abbreviation. You may
 have noticed if there are choirs in your church that there are the high
-and lowish ...</p>"/>
+and lowish …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -144,8 +144,8 @@ Doesn&#8217;t <em>treble</em> mean something? The three tenors don&#8217;t sound
 I never heard them singing <em>falsetto</em>. (That&#8217;s the higher register of
 your voice associated with yodeling which, by the way, is really hard
 whether you enjoy it or not.  Try it.) If you&#8217;ve wondered these things,
-too, then read on.<br />
-<a name="more"></a><br />
+too, then read on.<br>
+<a name="more"></a><br>
 When I took my music history class (instead of something useful, like
 the physics of oxides) we were taught that female voices are classified
 as <a href="http://www.youtube.com/watch?v=FMPv8mADpA4">soprano</a>,
@@ -252,13 +252,13 @@ to keep track of it&nbsp;all.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
