--- a/the-acceptance-of-ambiguity.html
+++ b/the-acceptance-of-ambiguity.html
@@ -130,7 +130,7 @@ Just Alfred            </a>
 </footer><!-- /.post-info -->                    </div>
                 </div>
                 <div style="text-align:center">
-<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Yin_yang.svg/240px-Yin_yang.svg.png" /></p>
+<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Yin_yang.svg/240px-Yin_yang.svg.png"></p>
 </div>
 <p><a href="https://blog.justalfred.com/literary-theory.html">A little while back</a>, I tried to illustrate the value of accepting ambiguity via Emily Dickinson and Jacob Bronowski.
 Poetry and Science.
@@ -274,13 +274,13 @@ But what is that point? See Popper and the paradox of&nbsp;tolerance.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
