--- a/the-peoples-house.html
+++ b/the-peoples-house.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="The People’s House"/>
         <meta property="og:url" content="https://blog.justalfred.com/the-peoples-house.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/10/None.html Considering that one’s social graph is not uniformly distributed among the general population, but rather concentrated around a small number of highly-connected nodes, I think it is fairly safe to say that 100% of my readers fall in …"/>
         <meta property="article:published_time" content="2011-10-19" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>Considering that one&#8217;s social graph is not uniformly distributed among
 the general population, but rather concentrated around a small number of
 highly-connected nodes, I think it is fairly safe to say that 100% of my
-readers fall in ...</p>"/>
+readers fall in …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -148,8 +148,8 @@ and out of touch to those blaming Hollywood for the false stereotypes. 
 Many people pointed to their personally penurious positions and
 penchants for opera as evidence against the stereotype.  I&#8217;ll take the
 argument a step further.  You will find few institutions more
-egalitarian than the opera house.<br />
-<a name="more"></a><br />
+egalitarian than the opera house.<br>
+<a name="more"></a><br>
 Granted, at the major halls, there are seats that sell for several
 hundred dollars each, and season subscriptions run easily into the
 thousands.  I recall seeing back in 2010 that by donating about
@@ -238,13 +238,13 @@ life feels&nbsp;fair.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
