--- a/virtuosity.html
+++ b/virtuosity.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/02/None.html A belated post…. Today, I will explore the notion of virtuosity and what it means to me. Let’s start with the Oxford Dictionary Online’s (ODO) definition of a virtuoso: “a person highly skilled in music or another ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/02/None.html A belated post…. Today, I will explore the notion of virtuosity and what it means to me. Let’s start with the Oxford Dictionary Online’s (ODO) definition of a virtuoso: “a person highly skilled in music or another …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Virtuosity"/>
         <meta property="og:url" content="https://blog.justalfred.com/virtuosity.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/02/None.html A belated post…. Today, I will explore the notion of virtuosity and what it means to me. Let’s start with the Oxford Dictionary Online’s (ODO) definition of a virtuoso: “a person highly skilled in music or another ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/02/None.html A belated post…. Today, I will explore the notion of virtuosity and what it means to me. Let’s start with the Oxford Dictionary Online’s (ODO) definition of a virtuoso: “a person highly skilled in music or another …"/>
         <meta property="article:published_time" content="2011-02-12" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -39,7 +39,7 @@
 <p>Today, I will explore the notion of virtuosity and what it means to me. 
 Let&#8217;s start with the Oxford Dictionary Online&#8217;s
 (<a href="http://oxforddictionaries.com/?attempted=true"><span class="caps">ODO</span></a>) definition of a
-virtuoso: &#8220;a person highly skilled in music or another ...</p>"/>
+virtuoso: &#8220;a person highly skilled in music or another …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -154,8 +154,8 @@ so heaping more praise on them does little to clarify anything.  But
 what about soloists less celebrated?  Do they deserve the designation? 
 Is skill all that matters or does depth of expression make a
 difference?  What about dancers, authors, or painters?  Why are we more
-likely to proclaim a poet a genius than a virtuoso?<br />
-<a name="more"></a><br />
+likely to proclaim a poet a genius than a virtuoso?<br>
+<a name="more"></a><br>
 What is the difference between a genius and a virtuoso, anyway?  <span class="caps">ODO</span>
 says a genius is &#8220;a person who is exceptionally intelligent or creative,
 either generally or in some particular respect.&#8221;  In common usage, we do
@@ -251,13 +251,13 @@ start calling her a&nbsp;virtuoso?</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
