--- a/a-little-night-food-music.html
+++ b/a-little-night-food-music.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/03/a-little-night-food-music.html For the unaware, the title is a reference to Mozart’s Eine Kleine Nachtmusik. Everyone knows the tune. Also for the unaware, “night-food” refers to the food you eat at dinner. So you see, the title is clever and ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/03/a-little-night-food-music.html For the unaware, the title is a reference to Mozart’s Eine Kleine Nachtmusik. Everyone knows the tune. Also for the unaware, “night-food” refers to the food you eat at dinner. So you see, the title is clever and …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="A Little Night-Food Music"/>
         <meta property="og:url" content="https://blog.justalfred.com/a-little-night-food-music.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/03/a-little-night-food-music.html For the unaware, the title is a reference to Mozart’s Eine Kleine Nachtmusik. Everyone knows the tune. Also for the unaware, “night-food” refers to the food you eat at dinner. So you see, the title is clever and ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/03/a-little-night-food-music.html For the unaware, the title is a reference to Mozart’s Eine Kleine Nachtmusik. Everyone knows the tune. Also for the unaware, “night-food” refers to the food you eat at dinner. So you see, the title is clever and …"/>
         <meta property="article:published_time" content="2013-03-12" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>For the unaware, the title is a reference to Mozart&#8217;s <a href="http://en.wikipedia.org/wiki/Eine_kleine_Nachtmusik">Eine Kleine
 Nachtmusik</a>.
 Everyone knows the tune. Also for the unaware, &#8220;night-food&#8221; refers to
-the food you eat at dinner. So you see, the title is clever and ...</p>"/>
+the food you eat at dinner. So you see, the title is clever and …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -138,7 +138,7 @@ Just Alfred            </a>
 Nachtmusik</a>.
 Everyone knows the tune. Also for the unaware, &#8220;night-food&#8221; refers to
 the food you eat at dinner. So you see, the title is clever and not at
-all contrived because this post is about music to go along with dinner.<br />
+all contrived because this post is about music to go along with dinner.<br>
 <a name="more"></a>  </p>
 <p>I recently hosted a dinner party and made some Korean food for the
 occasion. The menu included ddukbokki as an appetizer which I dubbed,
@@ -196,13 +196,13 @@ maybe Swan Lake if anyone ate&nbsp;swan.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
