--- a/austin-auto.html
+++ b/austin-auto.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html A kind friend forgave my ignorance of popular and indie music since I know a fair deal about classical music. This, she deemed, was an elevated sort of knowledge. The compliment was appreciated, but I can’t logically justify ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html A kind friend forgave my ignorance of popular and indie music since I know a fair deal about classical music. This, she deemed, was an elevated sort of knowledge. The compliment was appreciated, but I can’t logically justify …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Austin-auto"/>
         <meta property="og:url" content="https://blog.justalfred.com/austin-auto.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html A kind friend forgave my ignorance of popular and indie music since I know a fair deal about classical music. This, she deemed, was an elevated sort of knowledge. The compliment was appreciated, but I can’t logically justify ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html A kind friend forgave my ignorance of popular and indie music since I know a fair deal about classical music. This, she deemed, was an elevated sort of knowledge. The compliment was appreciated, but I can’t logically justify …"/>
         <meta property="article:published_time" content="2010-12-13" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>A kind friend forgave my ignorance of popular and indie music since I
 know a fair deal about classical music. This, she deemed, was an
 elevated sort of knowledge. The compliment was appreciated, but I can&#8217;t
-logically justify ...</p>"/>
+logically justify …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -232,13 +232,13 @@ the&nbsp;experience.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
