--- a/grad-school-allegory.html
+++ b/grad-school-allegory.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/02/None.html Some friends of mine and I recently watched a DVD of a production of the opera, “Dialogues of the Carmelites” (1957) by Francis Poulenc based on the Martyrs of Compiègne. It’s somewhat modernist, being almost completely in recitative ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/02/None.html Some friends of mine and I recently watched a DVD of a production of the opera, “Dialogues of the Carmelites” (1957) by Francis Poulenc based on the Martyrs of Compiègne. It’s somewhat modernist, being almost completely in recitative …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Grad School Allegory"/>
         <meta property="og:url" content="https://blog.justalfred.com/grad-school-allegory.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/02/None.html Some friends of mine and I recently watched a DVD of a production of the opera, “Dialogues of the Carmelites” (1957) by Francis Poulenc based on the Martyrs of Compiègne. It’s somewhat modernist, being almost completely in recitative ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/02/None.html Some friends of mine and I recently watched a DVD of a production of the opera, “Dialogues of the Carmelites” (1957) by Francis Poulenc based on the Martyrs of Compiègne. It’s somewhat modernist, being almost completely in recitative …"/>
         <meta property="article:published_time" content="2011-02-19" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -39,7 +39,7 @@
 opera, &#8220;Dialogues of the Carmelites&#8221; (1957) by Francis Poulenc based on
 the <a href="http://www.catholicapologetics.info/library/onlinelibrary/martyrs.htm">Martyrs of
 Compiègne</a>. 
-It&#8217;s somewhat modernist, being almost completely in recitative ...</p>"/>
+It&#8217;s somewhat modernist, being almost completely in recitative …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -153,7 +153,7 @@ that repeats 16 times for these 16 nuns.  Listen to the texture of the
 music thin down from chorus to quartet, trio, duet, solo.  It&#8217;s&nbsp;tragic!  </p>
 <p>And then I realized it works as an allegory for our sad lives as PhD
 students.  Read on for my translation.  And excuse the sacrilege.  It&#8217;s
-just satire.<br />
+just satire.<br>
 <a name="more"></a>  </p>
 <p>The scene opens with a group of shabbily-dressed women being rounded up
 by soldiers.  The women are PhD students.  The soldiers are the
@@ -238,13 +238,13 @@ by their grace in martyrdom.  I still get shivers listening to this&nbsp;tablea
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
