--- a/hypotheses-part-2.html
+++ b/hypotheses-part-2.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Science" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/08/hypotheses-part-2.html Fancy bars these days like to serve their cocktails with a single big chunk of ice. Less surface area means slower cooling means less dilution of your expensive elixir over time. I don’t buy it. Here’s my ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/08/hypotheses-part-2.html Fancy bars these days like to serve their cocktails with a single big chunk of ice. Less surface area means slower cooling means less dilution of your expensive elixir over time. I don’t buy it. Here’s my …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Hypotheses Part 2"/>
         <meta property="og:url" content="https://blog.justalfred.com/hypotheses-part-2.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/08/hypotheses-part-2.html Fancy bars these days like to serve their cocktails with a single big chunk of ice. Less surface area means slower cooling means less dilution of your expensive elixir over time. I don’t buy it. Here’s my ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/08/hypotheses-part-2.html Fancy bars these days like to serve their cocktails with a single big chunk of ice. Less surface area means slower cooling means less dilution of your expensive elixir over time. I don’t buy it. Here’s my …"/>
         <meta property="article:published_time" content="2013-08-21" />
             <meta property="article:section" content="science" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>Fancy bars these days like to serve their cocktails with a single big
 chunk of ice. Less surface area means slower cooling means less dilution
 of your expensive elixir over time. I don&#8217;t buy&nbsp;it.  </p>
-<p><a name="more"></a>Here&#8217;s my ...</p>"/>
+<p><a name="more"></a>Here&#8217;s my …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -222,13 +222,13 @@ of my analysis, please let me&nbsp;know!</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
