--- a/quicklink-1.html
+++ b/quicklink-1.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html Heard about this from NPR today: http://howtolistentomusic.tumblr.com/ Or for the YouTube channel directly: http://www.youtube.com/user/howtolistentomusic This music critic goes through popular songs and rates each section (identified in the upper right) on ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html Heard about this from NPR today: http://howtolistentomusic.tumblr.com/ Or for the YouTube channel directly: http://www.youtube.com/user/howtolistentomusic This music critic goes through popular songs and rates each section (identified in the upper right) on …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Quicklink 1"/>
         <meta property="og:url" content="https://blog.justalfred.com/quicklink-1.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html Heard about this from NPR today: http://howtolistentomusic.tumblr.com/ Or for the YouTube channel directly: http://www.youtube.com/user/howtolistentomusic This music critic goes through popular songs and rates each section (identified in the upper right) on ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2010/12/None.html Heard about this from NPR today: http://howtolistentomusic.tumblr.com/ Or for the YouTube channel directly: http://www.youtube.com/user/howtolistentomusic This music critic goes through popular songs and rates each section (identified in the upper right) on …"/>
         <meta property="article:published_time" content="2010-12-15" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -40,7 +40,7 @@
 <p>Or for the YouTube channel directly:
 <a href="http://www.youtube.com/user/howtolistentomusic">http://www.youtube.com/user/howtolistentomusic</a>  </p>
 <p>This music critic goes through popular songs and rates each section
-(identified in the upper right) on ...</p>"/>
+(identified in the upper right) on …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -176,13 +176,13 @@ formula emerge from the more banal songwriters.&nbsp;Enjoy.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
