--- a/remix.html
+++ b/remix.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/09/None.html To my readers: Apologies for the extended hiatus. As it turns out, finishing and defending a dissertation drains one’s energy for composition more than I anticipated. After my momentum was lost, it was hard to pick up the ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/09/None.html To my readers: Apologies for the extended hiatus. As it turns out, finishing and defending a dissertation drains one’s energy for composition more than I anticipated. After my momentum was lost, it was hard to pick up the …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Remix"/>
         <meta property="og:url" content="https://blog.justalfred.com/remix.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/09/None.html To my readers: Apologies for the extended hiatus. As it turns out, finishing and defending a dissertation drains one’s energy for composition more than I anticipated. After my momentum was lost, it was hard to pick up the ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/09/None.html To my readers: Apologies for the extended hiatus. As it turns out, finishing and defending a dissertation drains one’s energy for composition more than I anticipated. After my momentum was lost, it was hard to pick up the …"/>
         <meta property="article:published_time" content="2011-09-17" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -38,7 +38,7 @@
 <p>To my readers:  Apologies for the extended hiatus.  As it turns out,
 finishing and defending a dissertation drains one&#8217;s energy for
 composition more than I anticipated.  After my momentum was lost, it was
-hard to pick up the ...</p>"/>
+hard to pick up the …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -139,8 +139,8 @@ finishing and defending a dissertation drains one&#8217;s energy for
 composition more than I anticipated.  After my momentum was lost, it was
 hard to pick up the pencil, as it were, through travels, moves, job
 searching and so on.  But I can only go so long without exercising my
-creative muscle, and so I am back.  And today my topic is the remix.<br />
-<a name="more"></a><br />
+creative muscle, and so I am back.  And today my topic is the remix.<br>
+<a name="more"></a><br>
 Or is the term &#8220;covers&#8221;?  &#8220;Edits&#8221;?  &#8220;Reworks&#8221;?  I won&#8217;t attempt to
 differentiate.  What I am calling a remix is any piece of music that
 draws heavily from an existing piece.  I think we are all familiar with
@@ -232,13 +232,13 @@ trance, for that matter.  Let&#8217;s have a&nbsp;discussion!</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
