--- a/renaissance.html
+++ b/renaissance.html
@@ -14,13 +14,13 @@
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music,info" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Renaissance"/>
         <meta property="og:url" content="https://blog.justalfred.com/renaissance.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I ..."/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I …"/>
         <meta property="article:published_time" content="2013-02-11" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -39,7 +39,7 @@
 <p>I don&#8217;t think I have to remind my readers what <em>renaissance</em> means, but
 that is what is going on&nbsp;here.  </p>
 <p><a name="more"></a>It has been well over a year since my last post, and
-much has changed. For one, I ...</p>"/>
+much has changed. For one, I …</p>"/>
 
     <!-- Bootstrap -->
         <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
@@ -211,13 +211,13 @@ it when I find the&nbsp;time.</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="https://blog.justalfred.com/tag/music.html">
+                            Music
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="https://blog.justalfred.com/tag/music.html">
-                            Music
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
