new post: getting started with pelican

--- a/authors.html
+++ b/authors.html
@@ -93,7 +93,7 @@ Just Alfred            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Just Alfred</h1>
-        <li><a href="https://blog.justalfred.com/author/just-alfred.html">Just Alfred</a> (49)</li>
+        <li><a href="https://blog.justalfred.com/author/just-alfred.html">Just Alfred</a> (50)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -116,19 +116,19 @@ Just Alfred            </a>
   <a href="https://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
-    </li>
-    <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/music.html">Music</a>
     </li>
+    <li class="list-group-item tag-1">
+      <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
+    </li>
     <li class="list-group-item tag-2">
       <a href="https://blog.justalfred.com/tag/science.html">science</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="https://blog.justalfred.com/tag/code.html">code</a>
+      <a href="https://blog.justalfred.com/tag/code.html">Code</a>
     </li>
     <li class="list-group-item tag-3">
       <a href="https://blog.justalfred.com/tag/info.html">info</a>
