--- a/proust-in-the-park.html
+++ b/proust-in-the-park.html
@@ -252,19 +252,19 @@ I had enough to think about, and before getting lost in Proust&#8217;s world, be
   <a href="https://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
-    </li>
-    <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/music.html">Music</a>
     </li>
+    <li class="list-group-item tag-1">
+      <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
+    </li>
     <li class="list-group-item tag-2">
       <a href="https://blog.justalfred.com/tag/science.html">science</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="https://blog.justalfred.com/tag/code.html">code</a>
+      <a href="https://blog.justalfred.com/tag/code.html">Code</a>
     </li>
     <li class="list-group-item tag-3">
       <a href="https://blog.justalfred.com/tag/info.html">info</a>
