--- a/toreamix.html
+++ b/toreamix.html
@@ -216,19 +216,19 @@ place, but it&#8217;s there.  Start at 0:39 in the chant, 3:23 in the&nbsp;song
   <a href="https://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
-    </li>
-    <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
     </li>
     <li class="list-group-item tag-1">
       <a href="https://blog.justalfred.com/tag/music.html">Music</a>
     </li>
+    <li class="list-group-item tag-1">
+      <a href="https://blog.justalfred.com/tag/humans.html">humans</a>
+    </li>
     <li class="list-group-item tag-2">
       <a href="https://blog.justalfred.com/tag/science.html">science</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="https://blog.justalfred.com/tag/code.html">code</a>
+      <a href="https://blog.justalfred.com/tag/code.html">Code</a>
     </li>
     <li class="list-group-item tag-3">
       <a href="https://blog.justalfred.com/tag/info.html">info</a>
