new post: poetry and poetics

--- a/discoveries-i.html
+++ b/discoveries-i.html
@@ -138,7 +138,7 @@ I’m taking a view that the answers to my questions can only be ones I devise f
 and that it will be the pursuit of beauty that leads me to&nbsp;them.</p>
 <p>How’s that search going? Some&nbsp;highlights:</p>
 <p>I mentioned the <a href="http://www.smb.museum/en/museums-institutions/museum-fuer-islamische-kunst/collection-research/research-cooperation/multaka.html">Multaka project</a>
-in <a href="http://blog.justalfred.com/empathy-in-its-place.html">my last post</a>.
+in <a href="https://blog.justalfred.com/empathy-in-its-place.html">my last post</a>.
 I love this example of community-level, considered, intentional empathy.
 When we open ourselves to those who are different from us, we can learn greater human truths in&nbsp;return.</p>
 <p>Over coffee with a friend of five years,
@@ -229,15 +229,26 @@ I have to reserve it for another&nbsp;day.</p>
     <li class="list-group-item tag-2">
       <a href="https://blog.justalfred.com/tag/code.html">Code</a>
     </li>
-    <li class="list-group-item tag-3">
-      <a href="https://blog.justalfred.com/tag/info.html">info</a>
-    </li>
     <li class="list-group-item tag-4">
       <a href="https://blog.justalfred.com/tag/literature.html">literature</a>
+    </li>
+    <li class="list-group-item tag-4">
+      <a href="https://blog.justalfred.com/tag/info.html">info</a>
     </li>
   </ul>
 </li>
 <!-- End Sidebar/Tag Cloud -->
+
+<!-- Sidebar/Links -->
+<li class="list-group-item">
+  <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
+  <ul class="list-group" id="links">
+    <li class="list-group-item">
+      <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
+    </li>
+  </ul>
+</li>
+<!-- End Sidebar/Links -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
