--- a/authors.html
+++ b/authors.html
@@ -93,7 +93,7 @@ Just Alfred            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Just Alfred</h1>
-        <li><a href="https://blog.justalfred.com/author/just-alfred.html">Just Alfred</a> (51)</li>
+        <li><a href="https://blog.justalfred.com/author/just-alfred.html">Just Alfred</a> (52)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -130,15 +130,26 @@ Just Alfred            </a>
     <li class="list-group-item tag-2">
       <a href="https://blog.justalfred.com/tag/code.html">Code</a>
     </li>
-    <li class="list-group-item tag-3">
-      <a href="https://blog.justalfred.com/tag/info.html">info</a>
-    </li>
     <li class="list-group-item tag-4">
       <a href="https://blog.justalfred.com/tag/literature.html">literature</a>
+    </li>
+    <li class="list-group-item tag-4">
+      <a href="https://blog.justalfred.com/tag/info.html">info</a>
     </li>
   </ul>
 </li>
 <!-- End Sidebar/Tag Cloud -->
+
+<!-- Sidebar/Links -->
+<li class="list-group-item">
+  <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
+  <ul class="list-group" id="links">
+    <li class="list-group-item">
+      <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
+    </li>
+  </ul>
+</li>
+<!-- End Sidebar/Links -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
