--- a/preconceptions-part-2.html
+++ b/preconceptions-part-2.html
@@ -299,15 +299,26 @@ you need to&nbsp;know.&#8221;</p>
     <li class="list-group-item tag-2">
       <a href="https://blog.justalfred.com/tag/code.html">Code</a>
     </li>
-    <li class="list-group-item tag-3">
-      <a href="https://blog.justalfred.com/tag/info.html">info</a>
-    </li>
     <li class="list-group-item tag-4">
       <a href="https://blog.justalfred.com/tag/literature.html">literature</a>
+    </li>
+    <li class="list-group-item tag-4">
+      <a href="https://blog.justalfred.com/tag/info.html">info</a>
     </li>
   </ul>
 </li>
 <!-- End Sidebar/Tag Cloud -->
+
+<!-- Sidebar/Links -->
+<li class="list-group-item">
+  <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
+  <ul class="list-group" id="links">
+    <li class="list-group-item">
+      <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
+    </li>
+  </ul>
+</li>
+<!-- End Sidebar/Links -->
   </ul>
 </section>
 <!-- End Sidebar -->            </aside>
