add summary pages to links

--- a/i-am-not-who-i-was.html
+++ b/i-am-not-who-i-was.html
@@ -205,6 +205,15 @@ can I extend love and compassion to the confused, scared kid once called by my&n
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
+      <a href="archives.html" target="_blank">Archives</a>
+    </li>
+    <li class="list-group-item">
+      <a href="categories.html" target="_blank">Categories</a>
+    </li>
+    <li class="list-group-item">
+      <a href="tags.html" target="_blank">Tags</a>
+    </li>
+    <li class="list-group-item">
       <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
