--- a/physics-and-platonic-forms.html
+++ b/physics-and-platonic-forms.html
@@ -241,6 +241,15 @@ That&#8217;s kind of a problem.&#160;<a class="footnote-backref" href="#fnref-1"
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
+      <a href="archives.html" target="_blank">Archives</a>
+    </li>
+    <li class="list-group-item">
+      <a href="categories.html" target="_blank">Categories</a>
+    </li>
+    <li class="list-group-item">
+      <a href="tags.html" target="_blank">Tags</a>
+    </li>
+    <li class="list-group-item">
       <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
