--- a/pygotham-2016.html
+++ b/pygotham-2016.html
@@ -195,6 +195,15 @@ to &#8220;Spark Dataframes for the Pandas&nbsp;Pro&#8221;. </p>
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
+      <a href="archives.html" target="_blank">Archives</a>
+    </li>
+    <li class="list-group-item">
+      <a href="categories.html" target="_blank">Categories</a>
+    </li>
+    <li class="list-group-item">
+      <a href="tags.html" target="_blank">Tags</a>
+    </li>
+    <li class="list-group-item">
       <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
