--- a/quicklink-2.html
+++ b/quicklink-2.html
@@ -213,6 +213,15 @@ need to be making better progress on my other&nbsp;endeavor&#8230;.</p>
   <h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
   <ul class="list-group" id="links">
     <li class="list-group-item">
+      <a href="archives.html" target="_blank">Archives</a>
+    </li>
+    <li class="list-group-item">
+      <a href="categories.html" target="_blank">Categories</a>
+    </li>
+    <li class="list-group-item">
+      <a href="tags.html" target="_blank">Tags</a>
+    </li>
+    <li class="list-group-item">
       <a href="feeds/all.rss.xml" target="_blank">RSS feed</a>
     </li>
   </ul>
